spec/e2e/operator/add_bool_num.lit
true + 123 # error: [line 1] Runtime error: Undefined operator + for Bool and Integer.
